hybrid-map: Disabled states hover and grades hover. Fixed label text alignment

--- a/hybrid-map/css/hybrid-map.less
+++ b/hybrid-map/css/hybrid-map.less
@@ -26,15 +26,9 @@ body {
     font-weight: 400;
     font-size: 0px;
 }
-#box0 {
+#box1, #box2, #box3 {
     display: inline-block;
     text-align: center;
-    > * {
-        font-size: @font1Size;
-    }
-}
-#box1 {
-    display: inline-block;
     vertical-align: top;
     > * {
         font-size: @font1Size;
@@ -81,9 +75,9 @@ body {
         stroke-width: @gradesStrokeWidth;
         pointer-events: none;
     }
-    text.grade-label {
-        text-anchor: middle;
+    text.grade-label, text.filters-text {
         dominant-baseline: middle;
+        text-anchor: middle;
         pointer-events: none;
     }
 }
@@ -118,8 +112,11 @@ body {
     }
 }
 #info-svg {
-    outline: 1px solid @statesStrokeColor;
     text-align: center;
+    text.info-text {
+        dominant-baseline: middle;
+        text-anchor: middle;
+    }
 }
 .vspacer-15 {
     display: block;
